--- a/_posts/2024-10-11-Docker5.md
+++ b/_posts/2024-10-11-Docker5.md
@@ -56,11 +56,26 @@ _LXC Features_
 
 ## Docker
 
-As mentioned earlier, while LXC provided an isolated environment, it lacked essential features for effectively running services within it. Docker, built on **cgroups** and **namespaces**, extends these capabilities by offering functionalities such as image and container management, making it more practical for real-world use. With Docker, CPU and memory allocation can be distinctly isolated within containers. This is possible due to the **cgroups** and **namespace** features of the Linux kernel.
-
+As mentioned earlier, while LXC provided an isolated environment, it lacked essential features for effectively running services within it. Docker, built on **cgroups** and **namespaces**, extends these capabilities by offering functionalities such as image and container management, making it more practical for real-world use.    
 Like LXC, Docker runs multiple containers on a single OS. Therefore, there is no need to install a guest OS for each process (as in Virtual Machines), and the system call process for accessing hardware resources is relatively simple. Since Docker provides a lightweight virtualization technology compared to traditional virtualization, it is highly scalable. Users can create containers as needed and easily remove them when they are no longer required.
 
 While Docker shares similarities with LXC, there are clear differences. The table below summarizes these distinctions.
+
+|**Category**|**LXC**|**Docker**|
+|---|---|---|
+|**Isolation Level**|Provides a full OS environment similar to a VM|Isolates at the application level|
+|**Kernel Sharing**|Shares the host OS kernel|Shares the host OS kernel (**optimized for running containerized applications**)|
+|**File System**|Provides a complete root file system (including `/bin`, `/lib`, `/etc`)|Uses a layered file system (OverlayFS) for lightweight operation|
+|**Networking**|Supports a separate network stack (can assign a physical interface)|Uses NAT-based networking by default|
+|**Process Management**|Can run multiple processes similar to the host OS|Typically runs a single main process inside the container|
+|**Advantages**|High flexibility, provides a full OS environment|**Lightweight, fast deployment, portability**|
+|**Disadvantages**|Relatively heavy, requires VM-like configuration|Limited OS environment, single-process execution model|
+
+<!--
+앞서 말한 LXC는 격리된 환경을 제공하기는 했으나, 실질적으로 그 안에서 서비스를 운영하기 위한 기능이 부족했습니다. 도커는 cgroups와 namespaces를 기반으로 하면서도 이미지와 컨테이너 관리 등의 다양한 기능들을 제공함으로써 실질적으로 필요한 기능들을 제공합니다
+
+도커는 LXC와 마찬가지로 하나의 OS를 통해 여러 컨테이너를 구동시킨다. 따라서 각 프로세스마다 게스트 OS를 설치(Virtual Machine)할 필요도 없고, 하드웨어 자원을 사용하기 위한 시스템 콜 절차도 비교적 간단하다. 가상화에 비해 가벼운 가상화 기술을 제공하는 도커는 가볍기 때문에 확장성이 용이하다. 내가 필요한 기능이 있다면 얼마든지 컨테이너로 만들고, 필요없다면 손쉽게 삭제할 수 있기 때문이다.
+LXC와 유사하면서도  차이점은 분명히 있다. 아래 표에 정리해 보았다.
 
 |**항목**|**LXC**|**Docker**|
 |---|---|---|
@@ -71,12 +86,6 @@ While Docker shares similarities with LXC, there are clear differences. The tabl
 |프로세스 관리|호스트 OS와 유사하게 여러 프로세스를 실행 가능|컨테이너 내부에서 하나의 메인 프로세스를 실행하는 방식이 일반적|
 |장점|높은 자유도, 전체 OS 환경 제공|**경량, 빠른 배포, 이식성**|
 |단점|상대적으로 무거움, VM과 유사한 설정 필요|제한적인 OS 환경, 단일 프로세스 실행 방식|
-
-<!--
-앞서 말한 LXC는 격리된 환경을 제공하기는 했으나, 실질적으로 그 안에서 서비스를 운영하기 위한 기능이 부족했습니다. 도커는 cgroups와 namespaces를 기반으로 하면서도 이미지와 컨테이너 관리 등의 다양한 기능들을 제공함으로써 실질적으로 필요한 기능들을 제공합니다. 도커를 사용하면 CPU와 메모리의 할당량이 각각 격리된 컨테이터라는 환경으로 구분할 수 있다. 이것이 가능한 이유는 앞서 말한 리눅스 커널의 **cgroups, namespace** 기능이 사용되기 때문이다.
-
-도커는 LXC와 마찬가지로 하나의 OS를 통해 여러 컨테이너를 구동시킨다. 따라서 각 프로세스마다 게스트 OS를 설치(Virtual Machine)할 필요도 없고, 하드웨어 자원을 사용하기 위한 시스템 콜 절차도 비교적 간단하다. 가상화에 비해 가벼운 가상화 기술을 제공하는 도커는 가볍기 때문에 확장성이 용이하다. 내가 필요한 기능이 있다면 얼마든지 컨테이너로 만들고, 필요없다면 손쉽게 삭제할 수 있기 때문이다.
-LXC와 유사하면서도  차이점은 분명히 있다. 아래 표에 정리해 보았다.
 -->
 
 ![Docker](/assets/img/2024-10-11-Docker5_3.png)
