--- a/_posts/2024-10-11-Docker5.md
+++ b/_posts/2024-10-11-Docker5.md
@@ -1,6 +1,6 @@
 ---
-title: Understanding Docker Containers
-description: Let's Understand the Features of Linux
+title: LinuX Container and Docker Container
+description: Let's Understand the Features of Linux/Docker Container.
 author: DS2Man
 date: 2024-10-11 11:00:00 +0000
 categories: [Docker, Understanding]
