--- a/_posts/2024-10-12-Docker6.md
+++ b/_posts/2024-10-12-Docker6.md
@@ -1,6 +1,6 @@
 ---
-title: Understanding Docker Image Layers
-description: Let's Understand the Features of Docker Image Layers
+title: Docker Image Layers
+description: Let's Understand the Features of Docker Image Layers.
 author: DS2Man
 date: 2024-10-12 11:00:00 +0000
 categories: [Docker, Understanding]
@@ -36,6 +36,8 @@ Docker image는 layer로 이루어져 있으며, 각 layer 계층은 모두 Read
 
 ![Containers and Layers](/assets/img/2024-10-12-Docker6_1.png)
 _Docker containers and layers(Source: [Docker Docs](https://docs.docker.com/engine/storage/drivers/))_
+
+## *Pull Docker Image*
 
 - I will fetch the MySQL image from the [Docker Hub](https://hub.docker.com/) and run a Docker container.  I will cover the Docker commands in the next post, so for now, it's best to focus on understanding the concept. For reference, the location where image layers are stored is `/var/lib/docker/overlay2`.    
 	`docker pull mysql`      
@@ -80,6 +82,8 @@ Docker Hub에서 mysql 검색 시 다양한 버전을 확인할 수 있다. late
 ![Dockerfile](/assets/img/2024-10-12-Docker6_2.png)
 _Dockerfile in Dockerhub(Source: [Dockerhub](https://hub.docker.com), [Dockerfile](https://github.com/docker-library/mysql/blob/df3a5c483a5e8c3c4d1eae61678fa5372c403bf0/innovation/Dockerfile.oracle))_
 
+## *Run Docker Container*
+
 - Let's run the container using the following command.    
 	`docker run -d --restart always --name mysql -v /dbdata:/var/lib/mysql -e MYSQL_ROOT_PASSWORD=1234 -d -p 3306:3306 mysql:latest`
 
@@ -92,7 +96,9 @@ CONTAINER ID   IMAGE          COMMAND                  CREATED         STATUS   
 (MyDev) jaoneol@DESKTOP-B7GM3C5:~/GP-MyReference/10.MyDockerTest$ 
 ```
 
-- Let's run the container using the following command.    
+## *Stop and delete Docker Container*
+
+- Let's stop the Docker container and try deleting both the container and the image.    
 	`docker rm -f mysql`    
 	`docker stop mysql`    
 	`docker rm mysql`,     
