--- a/_posts/2024-10-12-Docker6.md
+++ b/_posts/2024-10-12-Docker6.md
@@ -84,7 +84,7 @@ _Dockerfile in Dockerhub(Source: [Dockerhub](https://hub.docker.com), [Dockerfil
 
 ## *Run Docker Container*
 
-- Let's run the container using the following command.    
+- Let's run the container using the following command. As mentioned earlier, I will be writing about Docker commands in the next post, so for now, it would be good to first understand the concepts.    
 	`docker run -d --restart always --name mysql -v /dbdata:/var/lib/mysql -e MYSQL_ROOT_PASSWORD=1234 -d -p 3306:3306 mysql:latest`
 
 ```bash
