--- a/_posts/2024-10-13-Docker7.md
+++ b/_posts/2024-10-13-Docker7.md
@@ -1,5 +1,5 @@
 ---
-title: Dockerfile
+title: About Dockerfile
 description: Let's write a Dockerfile and build it.
 author: DS2Man
 date: 2024-10-13 11:00:00 +0000
@@ -21,7 +21,7 @@ pin: true
 https://hstory0208.tistory.com/entry/Docker-dockerfile의-개념과-작성법에-대해-알아보자
 도커파일은 **docker 에서 이미지를 생성하기 위한 용도로 작성하는 파일**이다.
 만들 이미지에 대한 정보를 기술해 둔 템플릿(template) 이라고 보면 된다.
-**여러가지 명령어를 토대로 Dockerfile을 작성한 후 빌드**하면 **Docker는 Dockerfile에 나열된 명령문을 차례대로 수행**하며 **DockerImage를 생성**한다.
+여러가지 명령어를 토대로 Dockerfile을 작성한 후 빌드면 Docker는 Dockerfile에 나열된 명령문을 차례대로 수행하며 DockerImage를 생성한다.
 -->
 
 ```bash
@@ -65,6 +65,9 @@ ENTRYPOINT ["python", "dockertest_main.py"]
 -->
 
 ```bash
+##################
+# vi .dockerignore
+##################
 .gitignore
 .dockerignore
 .flake8
