--- a/_posts/llm&rag/2025-01-07-RAG3.md
+++ b/_posts/llm&rag/2025-01-07-RAG3.md
@@ -3,8 +3,7 @@ title: LangChain using ChatOllama.
 description: Let's write code to create a LangChain using ChatOllama.
 author: DS2Man
 date: 2025-01-07 11:00:00 +0000
-categories:
-  - Journey into Generative AI
+categories: [LLM&RAG, Understanding]
 tags:
   - RAG
   - ChatOllama
