--- a/_posts/llm&rag/2025-01-08-RAG4.md
+++ b/_posts/llm&rag/2025-01-08-RAG4.md
@@ -3,8 +3,7 @@ title: Learning how to use prompts.
 description: Let's create a prompt manually and build LangChain. 
 author: DS2Man
 date: 2025-01-08 11:00:00 +0000
-categories:
-  - Journey into Generative AI
+categories: [LLM&RAG, Understanding]
 tags:
   - RAG
   - ChatBrainAI
