--- a/_posts/llm&rag/2025-01-05-RAG1.md
+++ b/_posts/llm&rag/2025-01-05-RAG1.md
@@ -3,7 +3,7 @@ title: LangChain using Hugging Face Transformers.
 description: Let’s write code to create a LangChain using Hugging Face Transformers.
 author: DS2Man
 date: 2025-01-05 11:00:00 +0000
-categories: [LLM&RAG, Understanding]
+categories: [LLM&RAG, L&R-Understanding]
 tags:
   - RAG
   - Hugging Face Transformers.
