--- a/_posts/llm&rag/2025-01-06-RAG2.md
+++ b/_posts/llm&rag/2025-01-06-RAG2.md
@@ -3,7 +3,7 @@ title: LangChain using My Own Custom class, ChatBrainAI.
 description: Let's write code to create a LangChain using My Own Custom class,ChatBrainAI
 author: DS2Man
 date: 2025-01-06 11:00:00 +0000
-categories: [LLM&RAG, Understanding]
+categories: [LLM&RAG, L&R-Understanding]
 tags:
   - RAG
   - ChatBrainAI
