--- a/_posts/llm&rag/2025-01-09-RAG5.md
+++ b/_posts/llm&rag/2025-01-09-RAG5.md
@@ -3,7 +3,7 @@ title: Differences in prompt formats based on LLM models.
 description: Let's identify the differences in prompt formats based on LLM models.
 author: DS2Man
 date: 2025-01-09 11:00:00 +0000
-categories: [LLM&RAG, Understanding]
+categories: [LLM&RAG, L&R-Understanding]
 tags:
   - RAG
   - ChatBrainAI
