--- a/_posts/llm&rag/2025-01-10-RAG6.md
+++ b/_posts/llm&rag/2025-01-10-RAG6.md
@@ -3,7 +3,7 @@ title: Learning how to use prompts with ChatOllama.
 description: Let's create a prompt manually and build LangChain with ChatOllama.
 author: DS2Man
 date: 2025-01-10 11:00:00 +0000
-categories: [LLM&RAG, Understanding]
+categories: [LLM&RAG, L&R-Understanding]
 tags:
   - RAG
   - ChatOllama
