--- a/_posts/llm&rag/2025-01-11-RAG7.md
+++ b/_posts/llm&rag/2025-01-11-RAG7.md
@@ -3,7 +3,7 @@ title: Learning how to use prompt files with ChatOllama.
 description: Let's load a prompt files and build LangChain with ChatOllama.
 author: DS2Man
 date: 2025-01-11 11:00:00 +0000
-categories: [LLM&RAG, Understanding]
+categories: [LLM&RAG, L&R-Understanding]
 tags:
   - RAG
   - ChatOllama
