--- a/_posts/mylife/2024-12-15-MyOpinion-2024.md
+++ b/_posts/mylife/2024-12-15-MyOpinion-2024.md
@@ -19,21 +19,21 @@ https://github.com/Team-Neighborhood/I-want-to-study-Data-Science/wiki/데이터
 
 2024년은 나에게 인생의 큰 좌절과 희망을 알려준 한 해였던 거 같다. 정말 시간이 빨리 흐른 거 같다. 23년 말 부서내 조직 개편과 동시에 파트장이라는 직책을 얻게 되었다. 과연 이러한 직책이 나에게 어울릴까? 삼성에서의 관리자에 대해서 고민하는 한 해였다.
 
-- 부서 내 AI Solution 초대 파트장
+- PJT AI Solution 초대 파트장
 - 생성형 AI
-- 지인의 실리콘밸리
 - 삼성에서의 관리자란
+- 지인의 실리콘밸리
 - 블로그 시작
 
-#### *부서 내 AI Solution 초대 파트장*
+#### *PJT AI Solution 초대 파트장*
 
-2023년, 삼성 메모리 사업부 주관 **Data Scientist Festival**에서 **"ML/Statistics based Machine Failure Prediction"**이라는 주제로 발표를 진행했고, 삼성전자 온양캠퍼스에서 유일하게 **Good Practice 수상**을 하게 되었다.    
-이 상은 단순한 성과가 아니라, 저에게는 큰 의미가 있었다. 2018년 **서울대 데이터사이언스 혁신전문가 과정(서울대-삼성 DS2)** 을 수료한 이후, Data Scientist로서 끊임없이 도전한 끝에 받은 첫 번째 상이기 때문이다.    
-이러한 성과를 인정해 주신 덕분에, 새롭게 신설된 **AI Solution 파트장**으로 역할을 맡게 되었다. 이 자리를 빌려, 저를 믿고 기회를 주신 마스터님께 깊이 감사드린다.
+2023년, **삼성 메모리 사업부 주관 Data Scientist Festival**에서 **"ML/Statistics-based Machine Failure Prediction"**이라는 주제로 발표를 진행했고, 삼성전자 온양캠퍼스에서 유일하게 **Good Practice**을 수상하게 되었다.    
+이 상은 단순한 성과가 아니라, 나에게 큰 의미가 있었다. 2018년 **서울대 데이터 사이언스 혁신전문가 과정(서울대-삼성 DS2)** 을 수료한 이후, Data Scientist로서 끊임없이 도전한 끝에 받은 첫 번째 상이기 때문이다.    
+이러한 성과를 인정받은 덕분에, 새롭게 신설된 **AI Solution 파트장** 역할을 맡게 되었다. 이 자리를 빌려, 나를 믿고 기회를 주신 마스터님께 깊이 감사드린다.
 
 #### *생성형 AI*
 
-2022년 11월 30일 ChatGPT의 공개 이후, 대규모 언어 모델(Large Language Model, LLM)은 인공지능 분야에서 혁신적인 발전을 이끌며 다양한 산업에서 주목받고 있다. 최근에는 OpenAI의 4o, o1이 등장하면서 본격적인 생성형 AI 시대에 들어왔다고 생각이 되었다. 
+2022년 11월 30일, **ChatGPT**가 공개된 이후 대규모 언어 모델(Large Language Model, LLM)은 인공지능 분야에서 혁신적인 발전을 이끌며 다양한 산업에서 주목받고 있다. 최근에는 OpenAI의 GPT-4o와 GPT-o1이 등장하면서, 본격적인 생성형 AI 시대가 열렸다고 느꼈다.
 
 |**버전**|**출시일**|**주요 특징**|
 |---|---|---|
@@ -46,4 +46,10 @@ https://github.com/Team-Neighborhood/I-want-to-study-Data-Science/wiki/데이터
 |**o1-mini**|2024년 9월|o1 모델의 경량화 버전으로, 빠른 응답을 제공함.|
 |**o1**|2024년 12월|정식 출시된 o1 모델로, 이전 프리뷰 버전을 대체함.|
 
-파트장 역활을 수행하면서 첫 진행되어야 할 프로젝트로 생성형 AI 서비스를 진행하기로 하였다. 그러나 현실적인 제약이 많았던 거 같다. 우선 신설 파트에서 파트원들의 동의를 얻기가 쉽지 않았다. 파트의 업무에 대한 R&R이 명확하지 않고, 굳이 특정 부서에서 이러한 서비스를 할 필요가 있을까 하는 논쟁이였다.  
+파트장 역할을 수행하며 첫 번째 프로젝트로 **생성형 AI 서비스**를 추진하기로 했다. 그러나 현실적인 제약이 많았다. 우선 신설 파트의 업무에 대한 R&R이 명확하지 않았고, "굳이 우리 파트에서 이러한 서비스를 해야 할까?"라는 논쟁도 있었다.  그렇다고 예측형 AI에 도전하기에는, 반도체 데이터를 몇 년간 분석해 온 나로서는 그 현실적인 한계를 너무 잘 알고 있기에 쉽지 않은 선택이었다. 더욱이 프로젝트에서 요구하는 사항들은 현실과 괴리가 커 답답하기만 했다.     
+
+그러나 나는 새로운 도전을 두려워하지 않았다. 불확실성이 많을수록 오히려 기회가 있다는 믿음이 있었고, 쉽지 않은 길일수록 도전할 가치가 있다고 생각했다. 이 프로젝트도 결국, 해야 한다면 내가 가장 먼저 도전해 보는 것이 맞다고 판단했다.
+
+#### *삼성에서의 관리자란*
+
+나는 실무자로써는 충분한 능력을 보여주었다고 생각이 들었다. 나의 시간으로 과제를 진행하고 성과도 얻을 수 있었다. 파트장이라는 직책을 맡고도 가능할 거라 고 
