--- a/_posts/mylife/2024-12-15-MyOpinion-2024.md
+++ b/_posts/mylife/2024-12-15-MyOpinion-2024.md
@@ -17,7 +17,7 @@ pin: true
 https://github.com/Team-Neighborhood/I-want-to-study-Data-Science/wiki/데이터-분야의-직군-소개
 -->
 
-2024년은 나에게 인생의 큰 좌절과 희망을 알려준 한 해였던 거 같다. 정말 시간이 빨리 흐른 거 같다. 23년 말 부서내 조직 개편과 동시에 **파트장이라는 직책**을 얻게 되었다. 과연 이러한 직책이 나에게 어울릴까? 삼성에서의 관리자에 대해서 고민하는 한 해였다.
+2024년은 나에게 인생의 큰 좌절과 희망을 알려준 한 해였다. 정말 시간이 빨리 흐른 거 같다. 23년 말 부서내 조직 개편과 동시에 **파트장이라는 직책**을 얻게 되었다. 과연 이러한 직책이 나에게 어울릴까? 삼성에서의 관리자에 대해서 고민하는 한 해였다.
 
 - PJT AI Solution 초대 파트장
 - 생성형 AI
