--- a/_posts/mylife/2024-12-15-MyOpinion-2024.md
+++ b/_posts/mylife/2024-12-15-MyOpinion-2024.md
@@ -65,7 +65,7 @@ https://github.com/Team-Neighborhood/I-want-to-study-Data-Science/wiki/데이터
 
 그러나 반도체 데이터를 몇 년간 분석해 온 나로서는 그 현실적인 한계를 누구보다 잘 알고 있기에, **명확한 방향을 설정하지 않는다면 단순한 꿈으로 끝날 수도 있다는 생각이 들었다.** 
 
-#### *2025년 목표와 나의 바램*
+#### *2025년 목표와 나의 바람*
 
 이러한 생각이 나를 새로운 도전으로 이끌었다. **단순히 실리콘밸리에 대한 막연한 동경이 아니라, 반도체 산업 내 AI의 역할을 재정의하고, 내가 가진 데이터 분석 및 AI 기술을 더욱 발전시키는 방향으로 나아가야 한다는 필요성을 절감했다.**
 
