--- a/_posts/mylife/2024-12-15-MyOpinion-2024.md
+++ b/_posts/mylife/2024-12-15-MyOpinion-2024.md
@@ -57,7 +57,7 @@ https://github.com/Team-Neighborhood/I-want-to-study-Data-Science/wiki/데이터
 
 더욱이 **보고를 위한 보고 자료 작성, 충분히 기획되지 않은 보고 등의 업무가 내가 생각하는 파트장의 역할과는 상당한 괴리감을 느끼게 했다.** _"삼성에서의 관리자는 이런 모습이어야 하는가?"_ 라는 의문이 들었고, 아쉬움이 매우 컸다. (다른 기업들도 마찬가지일까? 솔직히 잘 모르겠다.)
 
-#### *지인의 실리콘밸리*
+#### *지인의 실리콘밸리 행*
 
 나의 지인 중 한 명이 실리콘밸리의 **어플라이드 머티리얼즈(Applied Materials, AMAT)** 로 이직했다. 그는 화성캠퍼스의 반도체 연구소에 재직하던 분으로, 삼성전자에서의 아쉬움과 새로운 도전을 위해 이직을 결심했다. 과정이 결코 쉽지는 않았지만, **박사 학위와 반도체 설계라는 특수성이 이직하는 데 중요한 요소로 작용했다**고 한다.
 
