--- a/_posts/db/2024-11-01-MySQL1.md
+++ b/_posts/db/2024-11-01-MySQL1.md
@@ -14,7 +14,7 @@ pin: true
 
 ## *Install MySQL on Ubuntu*
 
-#### *The entire process) Install MySQL on Ubuntu*
+#### *The entire process to Install MySQL on Ubuntu*
 
 - `docker pull mysql`        
 - `docker volume create mysql`    
