--- a/_posts/db/2024-11-15-Milvus1.md
+++ b/_posts/db/2024-11-15-Milvus1.md
@@ -31,7 +31,7 @@ The [Milvus GitHub Releases page](https://github.com/milvus-io/milvus/releases) 
 ![Milvus Architecture](/assets/img/2024-11-15-Milvus1_1.png)
 _Milvus Architecture(Source: [Milvus Architecture](https://milvus.io/docs/overview.md))_
 
-#### *The entire process) Install Milvus on Ubuntu*
+#### *The entire process to Install Milvus on Ubuntu*
 
 As mentioned earlier, you can check and download the official release versions of **Milvus** from the [Milvus GitHub Releases page](https://github.com/milvus-io/milvus/releases). Since my setup includes GPU support([My NVIDIA Container Toolkit Setup](https://jaoneol.github.io/posts/Docker-Setup6/#install-nvidia-contrainer-toolkit)), I downloaded the `docker-compose-gpu.yml` file and modified it to fit my needs. The changes have also been documented. In particular, I have added **Docker volume management** and **Attu**, a tool for managing Milvus. Please take note of these modifications. The entire process is as follows.    
 
