--- a/_posts/mylife/2024-12-15-MyOpinion-2024.md
+++ b/_posts/mylife/2024-12-15-MyOpinion-2024.md
@@ -22,8 +22,8 @@ https://github.com/Team-Neighborhood/I-want-to-study-Data-Science/wiki/데이터
 - PJT AI Solution 초대 파트장
 - 생성형 AI
 - 삼성에서의 관리자란
-- 지인의 실리콘밸리
-- 2025년 목표와 나의 바램
+- 지인의 실리콘밸리 행
+- 2025년 목표와 나의 바람
 
 #### *PJT AI Solution 초대 파트장*
 
@@ -36,14 +36,12 @@ https://github.com/Team-Neighborhood/I-want-to-study-Data-Science/wiki/데이터
 
 |**버전**|**출시일**|**주요 특징**|
 |---|---|---|
-|**GPT-3.5**|2022년 11월|ChatGPT의 초기 버전으로, GPT-3.5 모델을 기반으로 함.|
-|**GPT-3.5 Turbo**|2023년|GPT-3.5의 개선 버전으로, 응답 정확도와 속도가 향상됨.|
-|**GPT-4**|2023년 3월|ChatGPT Plus 구독자에게 제공된 버전으로, 더 발전된 GPT-4 모델을 기반으로 함.|
+|**ChatGPT<br>(GPT-3.5 기반)**|2022년 11월 30일|대화형 AI 모델로 공개되어 사용자와 자연스러운 대화를 가능하게 함.|
+|**GPT-4**|2023년 3월 14일|멀티모달 모델로, 텍스트와 이미지 입력을 처리하며, 다양한 전문 및 학술 벤치마크에서 인간 수준의 성능을 보임.|
 |**GPT-4o**|2024년 5월 13일|텍스트, 이미지, 오디오를 실시간으로 처리 및 생성할 수 있는 멀티모달 모델로, 이전 버전보다 빠르고 비용 효율적임.|
 |**GPT-4o Mini**|2024년 7월 18일|GPT-4o의 경량화 버전으로, 비용 효율성이 높으며 GPT-3.5 Turbo를 대체함.|
-|**o1-preview**|2024년 9월|응답 전에 더 깊이 있는 사고를 통해 정확도를 높인 모델의 프리뷰 버전.|
-|**o1-mini**|2024년 9월|o1 모델의 경량화 버전으로, 빠른 응답을 제공함.|
-|**o1**|2024년 12월|정식 출시된 o1 모델로, 이전 프리뷰 버전을 대체함.|
+|**o1-preview**|2024년 9월 12일|응답 전에 더 깊이 있는 사고를 통해 정확도를 높인 모델의 프리뷰 버전.|
+|**o1**|2024년 12월 5일|정식 출시된 o1 모델로, 이전 프리뷰 버전을 대체하며, ChatGPT Pro 구독자에게 제공되는 o1 pro mode를 포함함.|
 
 파트장 역할을 맡으며 첫 번째 프로젝트로 **생성형 AI 서비스**를 추진하기로 했다. 그러나 현실적인 제약이 많았다. 우선 신설 파트의 업무에 대한 R&R이 명확하지 않았고, <ins>"굳이 우리 파트에서 이러한 서비스를 해야 할까?"</ins>라는 논쟁도 있었다.  그렇다고 예측형 AI에 도전하기에는, 반도체 데이터를 몇 년간 분석해 온 나로서는 그 현실적인 한계를 너무 잘 알고 있었기에 쉽지 않은 선택이었다. 더욱이 PJT에서 요구하는 사항들은 현실과 괴리가 커 답답하기만 했다.     
 
@@ -75,8 +73,8 @@ https://github.com/Team-Neighborhood/I-want-to-study-Data-Science/wiki/데이터
 
 다음과 같은 것을 목표로 열심히 살아보려 한다.
 
+- 블로그 시작
 - LLM&RAG
 - 영어
-- 블로그 시작
 - 운동
 - 파트장 안하기
