--- a/_posts/db/2024-11-01-MySQL1.md
+++ b/_posts/db/2024-11-01-MySQL1.md
@@ -115,13 +115,24 @@ exit
         ],
 ```
 
-## *Use DBeaver*
+## *Use HeidiSQL(Recommend)*
 
-There are many database-related tools, but I primarily use **DBeaver**. Each database tool has its pros and cons, but in practice, **DBeaver** offers many features that are highly beneficial for developers. In particular, it is free and can also be used in a corporate environment. You can download and use it from [DBeaver](https://dbeaver.io/download/).
+There are many database-related tools, but when connecting to MySQL, I mainly use **HeidiSQL**. Each database tool has its pros and cons, but in practice, **HeidiSQL** offers many features that are highly beneficial for developers. In particular, it is free and can also be used in a corporate environment. You can download and use it from [HeidiSQL](https://www.heidisql.com/download.php).
 
 <!--
-많은 DB관련 툴을 존재하지만 나는 DBeaver을 주로 사용하고 있습니다.  
-DB 툴별로 장단점이 존재하지만, 실무에서 사용하기에 DBeaver의 기능들이 가장 개발자에게 도움이 되는 것들이 많은 것 같습니다. 특히 무료로 회사에서도 사용 가능하다. [DBeaver](https://dbeaver.io/download/)에서 다운로드하여 사용하자.
+많은 DB관련 툴을 존재하지만 MySQL 접속할 때는 나는 HeidiSQL을 주로 사용하고 있습니다.
+DB 툴별로 장단점이 존재하지만, 실무에서 사용하기에 DBeaver의 기능들이 가장 개발자에게 도움이 되는 것들이 많은 것 같습니다. 특히 무료로 회사에서도 사용 가능하다. [HeidiSQL](https://www.heidisql.com/download.php)에서 다운로드하여 사용하자.
+-->
+
+![DBeaver](/assets/img/2024-11-01-MySQL1_1.png)
+_HeidiSQL_
+
+## *Use DBeaver*
+
+For reference, there is also a tool called DBeaver, which seems useful for connecting to various types of databases besides MySQL. (At my company, we mainly use it for connecting to Oracle.). You can download and use it from [DBeaver](https://dbeaver.io/download/).
+
+<!--
+참고로 DBeaver라는 Tool도 있는데, MySQL 이외에 다양한 종류의 DB 접속에 유용한 거 같다.(회사에서 Oracle 접속 시 주로 사용한다.)
 -->
 
 ![DBeaver](/assets/img/2024-11-01-MySQL1_1.png)
