--- a/_posts/db/2024-11-15-Milvus1.md
+++ b/_posts/db/2024-11-15-Milvus1.md
@@ -14,11 +14,28 @@ pin: true
 
 ## *Introuduce Milvus*
 
-There are various types of VectorDBs, including **Milvus**, FAISS (Facebook AI Similarity Search), Pinecone, and Chroma. Among them, Milvus is the most widely used open-source VectorDB. The reasons for choosing Milvus include its open-source nature, high performance and scalability, support for various indexing algorithms, easy-to-use API (REST API), and optimization for cloud and container environments. To be honest, there are many aspects I am not familiar with. As an engineer, I intend to focus on its practical usage. For more details, check out [Milvus Home](https://milvus.io/docs/overview.md).    
+According to the DB-Engines Ranking website, various VectorDBs exist, including Milvus, Pinecone, and Chroma. Since I have to use a VectorDB going forward, I was uncertain about which DBMS to choose, but ultimately I selected Milvus because it ranks highest among the open-source VectorDB options. ~~(Honestly, I wanted to use Pinecone, but I was discouraged after learning it’s a paid service...)~~    
+Functionally, Milvus offers various advantages such as high performance, scalability, diverse indexing algorithm support, easy-to-use APIs (REST API), and optimization for cloud and container environments. Honestly, there are many aspects I'm not entirely familiar with yet. As an engineer, I plan to approach it primarily from a practical usage perspective. For further details, refer to [Milvus Home](https://milvus.io/docs/overview.md).
 
-<!--
-VectorDB에는 Milvus, FAISS (Facebook AI Similarity Search), Pinecone, Chroma 등 다양한 종류가 존재한다. 그중에서 Milvus는 가장 널리 사용되는 오픈 소스 VectorDB이다. Milvus를 선택한 이유는 오픈 소스라는 점과  높은 성능과 확장성, 다양한 인덱싱 알고리즘 지원, 간편한 API(Rest API), 클라우드 및 컨테이너 환경 최적화 등의 다양한 장점이 존재한다.  솔직히 잘 모르는 내용이 많다. 나는 엔지니어로써 사용 위주로 바라보고자 한다. 자세한 사항은 [Milvus Home](https://milvus.io/docs/overview.md)에서 확인해라.
--->
+- _DB-Engines Ranking of Vector DBMS(Source: [DB-Engines Ranking](https://db-engines.com/en/ranking/vector+dbms))_
+
+|Rank|   |   |DBMS|Database Model|Score|   |   |
+|---|---|---|---|---|---|---|---|
+|Mar  <br>2025|Feb  <br>2025|Mar  <br>2024|-|-|Mar  <br>2025|Feb  <br>2025|Mar  <br>2024|
+|1.|1.|1.|[Elasticsearch](https://db-engines.com/en/system/Elasticsearch)|Multi-model ![info](https://db-engines.com/info.png)|131.38|-3.25|-3.41|
+|2.|2.|2.|[Couchbase](https://db-engines.com/en/system/Couchbase)|Multi-model ![info](https://db-engines.com/info.png)|15.05|-0.58|-4.11|
+|3.|3.|3.|[Kdb](https://db-engines.com/en/system/Kdb)|Multi-model ![info](https://db-engines.com/info.png)|7.10|+0.31|-0.59|
+|4.|4.|4.|[Aerospike](https://db-engines.com/en/system/Aerospike)|Multi-model ![info](https://db-engines.com/info.png)|5.22|+0.12|-1.30|
+|5.|5.|![up arrow](https://db-engines.com/up.gif) 6.|[Pinecone](https://db-engines.com/en/system/Pinecone)|[Vector](https://db-engines.com/en/article/Vector+DBMS)|3.17|+0.22|-0.16|
+|6.|6.|![up arrow](https://db-engines.com/up.gif) 9.|[Milvus](https://db-engines.com/en/system/Milvus)|[Vector](https://db-engines.com/en/article/Vector+DBMS)|2.77|+0.00|+1.07|
+|7.|7.|![down arrow](https://db-engines.com/down.gif) 5.|[DolphinDB](https://db-engines.com/en/system/DolphinDB)|Multi-model ![info](https://db-engines.com/info.png)|2.29|-0.09|-1.85|
+|8.|8.|![up arrow](https://db-engines.com/up.gif) 12.|[Qdrant](https://db-engines.com/en/system/Qdrant)|[Vector](https://db-engines.com/en/article/Vector+DBMS)|2.03|+0.10|+0.78|
+|9.|9.|![down arrow](https://db-engines.com/down.gif) 7.|[Chroma](https://db-engines.com/en/system/Chroma)|[Vector](https://db-engines.com/en/article/Vector+DBMS)|1.89|+0.04|-0.39|
+|10.|10.|![down arrow](https://db-engines.com/down.gif) 8.|[Weaviate](https://db-engines.com/en/system/Weaviate)|[Vector](https://db-engines.com/en/article/Vector+DBMS)|1.58|-0.07|-0.42|
+|11.|11.|11.|[Meilisearch](https://db-engines.com/en/system/Meilisearch)|Multi-model ![info](https://db-engines.com/info.png)|1.20|+0.07|-0.13|
+
+![Milvus Architecture](/assets/img/db/2024-11-15-Milvus1_1.png)
+_Milvus Architecture(Source: [Milvus Architecture](https://milvus.io/docs/architecture_overview.md))_
 
 ## *Install Milvus*
 
@@ -27,9 +44,6 @@ The [Milvus GitHub Releases page](https://github.com/milvus-io/milvus/releases) 
 <!--
 [Milvus GitHub Releases 페이지](https://github.com/milvus-io/milvus/releases)는 **Milvus**의 공식 배포 버전(릴리스)을 확인하고 다운로드할 수 있는 공간입니다. 이곳에서 최신 버전과 이전 버전의 Milvus를 찾을 수 있습니다. docker-compos-gpu.yml을 제공하고 있으며, 내용을 보면 milvus standalone 이외에 etcd, minio를 설치하는 내용이 포함 되어 있다.  `etcd`와 `minio`를 함께 설치하는 이유는 **Milvus의 아키텍처** 때문인거 같다. 
 -->
-
-![Milvus Architecture](/assets/img/db/2024-11-15-Milvus1_1.png)
-_Milvus Architecture(Source: [Milvus Architecture](https://milvus.io/docs/overview.md))_
 
 #### *The entire process to Install Milvus on Ubuntu*
 
