--- a/_posts/db/2024-11-16-Milvus2.md
+++ b/_posts/db/2024-11-16-Milvus2.md
@@ -1,6 +1,6 @@
 ---
-title: Ing...
-description: Ing...
+title: Collection and Index Creation
+description: Let's create collection and index in Milvus.
 author: DS2Man
 date: 2024-11-16 11:00:00 +0000
 categories: [DB, Milvus]
@@ -12,8 +12,127 @@ math: true
 pin: true
 ---
 
-<!-- 
-https://devocean.sk.com/blog/techBoardDetail.do?ID=165368
+## *Load libraray & Parameter definition*
+
+The `pymilvus` package and `sentence_transformers`, which provides embedding models, must be installed. The following code imports the required packages.
+
+```bash
+# Import necessary classes and functions from pymilvus
+from pymilvus import (
+    FieldSchema,       # Schema definition for individual fields in a collection
+    CollectionSchema,  # Defines the schema for an entire collection
+    DataType,          # Defines data types used in fields
+    MilvusClient       # Client class for connecting to Milvus server
+)
+
+# Import sentence_transformers for embedding generation
+from sentence_transformers import SentenceTransformer
+
+# I've commented out the parts commonly used as initial configuration.
+# You can adjust the settings according to your own configuration.
+MILVUS_URL = 'http://127.0.0.1:19530' # equal to 'http://localhost:19530'
+MILVUS_URL = 'http://localhost:19530'
+MILVUS_DB_NAME = 'ds2man'
+MILVUS_COL_NAME = 'TennisNews'
+MODEL_FOLDER = 'Pretrained_byGit'
+
+# Define the embedding model to be used (from sentence-transformers)
+EMBED_MODEL = "bge-m3"  # BAAI/bge-m3
+EMBED_DIMENSION = 1024 # Dimension of embeddings
+TENNISNEWS_COSINE_REF = 0.6 # Cosine similarity threshold value for similarity search queries
+```
+
+## *Create Collection*
+
+#### *Step1) Connect to MilvusClient*
+
+```bash
+# Connect to MilvusClient
+# Note: The database should be created beforehand
+client = MilvusClient(uri=MILVUS_URL)
+client.using_database(MILVUS_DB_NAME)  # Select the database to use
+# Alternative connection with database name specified
+# client = MilvusClient(uri=MILVUS_URL, db_name=MILVUS_DB_NAME)  
+```
+
+#### *Step2) Define Milvus Fields and Schema*
+
+```bash
+# Define Schema for individual fields in a collection
+fields = [
+    FieldSchema(name="id", dtype=DataType.INT64, auto_id=True),
+    FieldSchema(name="Date", dtype=DataType.INT64, max_length=10),
+    FieldSchema(name="NewsPaper", dtype=DataType.VARCHAR, max_length=100),
+    FieldSchema(name="Topic", dtype=DataType.VARCHAR, max_length=100),
+    FieldSchema(name="Embedding", dtype=DataType.FLOAT_VECTOR, dim=EMBED_DIMENSION)
+]
+
+# Defines the schema for an entire collection
+schema = CollectionSchema(fields, description="Collection schema for Tennis News")
+```
+
+#### *Step3) Create collection*
+
+```bash
+# Create collection (skip if already exists)
+if not client.has_collection(MILVUS_COL_NAME):
+    client.create_collection(
+        collection_name=MILVUS_COL_NAME,
+        schema=schema,
+        consistency_level=0  # 0 indicates eventual consistency
+    )
+    print(f"Collection '{MILVUS_COL_NAME}' created!")
+else:
+    # client.drop_collection(MILVUS_COL_NAME)  # Uncomment this line to delete the existing collection
+    print(f"Collection '{MILVUS_COL_NAME}' already exists.")
+```
+
+#### *Step4) Create Index*
+
+```bash
+# Create Index
+# To create an index for a collection, use prepare_index_params() to define the parameters, then use create_index().
+
+# 4.1. Set up the index parameters
+index_params = client.prepare_index_params()
+
+# 4.2. Add an index on the vector field
+index_params.add_index(
+    field_name="News_embedding",
+    index_name="idx1",
+    index_type="FLAT",      # Options: "FLAT", "IVF_FLAT", "IVF_PQ", "HNSW"
+    metric_type="COSINE"    # Options: "L2", "IP", "COSINE"
+)
+
+# If you want, you can add an index as shown below.
+# index_params.add_index(
+#    field_name="Topic",
+#    index_name="idx2",
+#    index_type="Trie"
+# )
+
+# 4.3. Create an index
+client.create_index(collection_name=MILVUS_COL_NAME, index_params=index_params)
+print("Index created!")
+
+# 5. Load Collection
+# Note: You should use `load_collection` to optimize vector search performance and manage resources efficiently.
+client.load_collection(MILVUS_COL_NAME)
+```
+
+At this stage, the key parts you should pay close attention to are `index_type` and `metric_type`.    
+For `index_type`, various search algorithms exist such as "FLAT," "IVF_FLAT," "IVF_PQ," and "HNSW." Honestly, I don't fully understand the details. However, the most commonly used combination is "FLAT" with "COSINE." Of course, depending on the data we'll be using, we may need to redefine the index type and metric accordingly.    
+For more detailed information, you might want to refer to [Milvus-Index](https://milvus.io/docs/index-vector-fields.md?tab=floating). Additionally, [Pinecone](https://www.pinecone.io/learn/series/faiss/vector-indexes/) provides an excellent explanation of ANN algorithms.
+
+<!--
+이번 단계에서 유심히 봐야할 부분은 index_type과 metric_type 이다.    
+index_type은 "FLAT", "IVF_FLAT", "IVF_PQ", "HNSW" 등 다양한 검색 알고리즘이 존재한다.  솔직히 자세한 내용은 모른다. 가장 일반적으로 사용하는 방식은 "FLAT"과 "COSINE"이다. 물론 우리가 앞으로 어떤 데이터를 활용하는 지에 따라 index의 type과 metric을 정의를 새롭게 할 필요는 있을 것이다.
+자세한 내용은 [Milvus, Index](https://milvus.io/docs/index-vector-fields.md?tab=floating)에서 확인하는 게 좋을 거 같고.  추가로 Pinecone에서 ANN 알고리즘을 설명을 잘 해놓았다.
 -->
 
-## *Ing...*
+|Metric Types|Index Types|
+|---|---|
+|- Euclidean distance (L2)<br>- Inner product (IP)<br>- Cosine similarity (COSINE)|- FLAT<br>- IVF_FLAT<br>- IVF_SQ8<br>- IVF_PQ<br>- GPU_IVF_FLAT<br>- GPU_IVF_PQ<br>- HNSW<br>- DISKANN|
+
+![ANN Algorithms](/assets/img/db/2024-11-16-Milvus2_1.png)
+_ANN Algorithms(Source: [Pinecone](https://www.pinecone.io/learn/series/faiss/vector-indexes/))_
