--- a/_posts/db/2024-11-15-Milvus1.md
+++ b/_posts/db/2024-11-15-Milvus1.md
@@ -17,7 +17,13 @@ pin: true
 According to the DB-Engines Ranking website, various VectorDBs exist, including Milvus, Pinecone, and Chroma. Since I have to use a VectorDB going forward, I was uncertain about which DBMS to choose, but ultimately I selected Milvus because it ranks highest among the open-source VectorDB options. ~~(Honestly, I wanted to use Pinecone, but I was discouraged after learning it’s a paid service...)~~    
 Functionally, Milvus offers various advantages such as high performance, scalability, diverse indexing algorithm support, easy-to-use APIs (REST API), and optimization for cloud and container environments. Honestly, there are many aspects I'm not entirely familiar with yet. As an engineer, I plan to approach it primarily from a practical usage perspective. For further details, refer to [Milvus Home](https://milvus.io/docs/overview.md).
 
-- _DB-Engines Ranking of Vector DBMS(Source: [DB-Engines Ranking](https://db-engines.com/en/ranking/vector+dbms))_
+<!--
+DB-Engines Ranking 웹사이트에 따르면 Milvus, Pinecone, Chroma 등 다양한 VectorDB가 존재합니다. 앞으로 VectorDB를 사용해야 하는 상황에서 어떤 DBMS를 선택할지 고민했지만, 결국 오픈 소스 VectorDB 중 가장 높은 순위를 기록한 Milvus를 선택했습니다. (사실 Pinecone을 사용하고 싶었지만, 유료 서비스라는 걸 알고 나서 포기했습니다...)
+
+기능적으로 Milvus는 높은 성능, 확장성, 다양한 인덱싱 알고리즘 지원, 사용하기 쉬운 API(REST API), 클라우드 및 컨테이너 환경에 대한 최적화 등 여러 장점을 제공합니다. 솔직히 아직 익숙하지 않은 부분도 많지만, 엔지니어로서 실용적인 활용을 중심으로 접근해볼 계획입니다. 자세한 내용은 Milvus Home을 참고하세요.
+-->
+
+- _DB-Engines Ranking of Vector DBMS(Source: [DB-Engines Ranking](https://db-engines.com/en/ranking/vector+dbms), update 2nd : 20250309)_
 
 |Rank|   |   |DBMS|Database Model|Score|   |   |
 |---|---|---|---|---|---|---|---|
