--- a/_posts/db/2024-11-16-Milvus2.md
+++ b/_posts/db/2024-11-16-Milvus2.md
@@ -31,7 +31,6 @@ from sentence_transformers import SentenceTransformer
 # I've commented out the parts commonly used as initial configuration.
 # You can adjust the settings according to your own configuration.
 MILVUS_URL = 'http://127.0.0.1:19530' # equal to 'http://localhost:19530'
-MILVUS_URL = 'http://localhost:19530'
 MILVUS_DB_NAME = 'ds2man'
 MILVUS_COL_NAME = 'TennisNews'
 MODEL_FOLDER = 'Pretrained_byGit'
@@ -79,13 +78,22 @@ if not client.has_collection(MILVUS_COL_NAME):
     client.create_collection(
         collection_name=MILVUS_COL_NAME,
         schema=schema,
-        consistency_level=0  # 0 indicates eventual consistency
+        consistency_level="Strong"  # 0 indicates eventual consistency
     )
     print(f"Collection '{MILVUS_COL_NAME}' created!")
 else:
     # client.drop_collection(MILVUS_COL_NAME)  # Uncomment this line to delete the existing collection
     print(f"Collection '{MILVUS_COL_NAME}' already exists.")
 ```
+
+- [Consistency Level](https://milvus.io/docs/consistency.md) : As a distributed vector database, Milvus offers multiple levels of consistency to ensure that each node or replica can access the same data during read and write operations. Currently, the supported levels of consistency include **Strong**, **Bounded**, **Eventually**, and **Session**, with **Bounded** being the default level of consistency used. By default, Milvus uses **Bounded Staleness**.
+
+|**Consistency Level**|**Description**|
+|---|---|
+|**Strong**|The strictest consistency level. Ensures that all nodes return the latest data, guaranteeing real-time consistency.|
+|**Bounded Staleness**|Ensures consistency within a bounded timeframe. While updates may not be immediately visible, consistency is guaranteed after a certain period. This is the default setting in Milvus.|
+|**Session**|Ensures that writes within the same client session are immediately visible. However, data consistency is not guaranteed across different sessions.|
+|**Eventually**|The weakest consistency level. Data may be temporarily inconsistent across nodes, but all replicas will eventually converge to the same state.|
 
 #### *Step4) Create Index*
 
