--- a/_posts/db/2024-11-17-Milvus3.md
+++ b/_posts/db/2024-11-17-Milvus3.md
@@ -37,12 +37,12 @@ Let's prepare sample data as shown below.
 | 2024-07-03 | Official Olympics Website   | Wimbledon                 | Korea's Kwon Soon-woo was eliminated in the first round of Wimbledon 2024, losing to Denmark's Holger Rune. |
 | 2024-11-13 | Chosun Ilbo                 | ATP Finals Victory        | Jannik Sinner dominated men's tennis in 2024, securing the ATP Finals title. |
 
-Then, the data was extracted in dictionary format for insertion. The key point here is _embedding_. The details of embedding will be covered later (honestly, I’m still updating my knowledge as I study). For now, I will proceed using _bge-m3_, which is widely used for Korean embeddings. The embedding process is simple—just use the following command to perform embedding.    
+Then, the data was extracted in dictionary format for insertion. The key point here is _embedding_. The details of embedding will be covered later ~~(honestly, I’m still updating my knowledge as I study).~~ For now, I will proceed using _bge-m3_, which is widely used for Korean embeddings. The embedding process is simple—just use the following command to perform embedding.    
 Additionally, after embedding, the data was converted into a dictionary format for insertion into the collection.
 
 <!--
 그리고 insert하기 위해서 dictionary 포멧으로 데이터를 추출하였다. 여기에서 중요한 사항은 embedding 이다. embedding에 대한 자세한 사항은 나중에 다루기로 하겠다.(솔직히 공부하면서 업데이트 중이라...) 우선 한국어 임베딩에 많이 사용되는 bge-m3 로 가지고 진행해 보겠다. 임베딩 방식은 간단하다. 아레 명령어를 통해서 embedding하면 된다.    
-추가로 입베딩 후 collection에 insert하기 위해 dictionary 형태로 변환도 진행하였다.
+추가로 임베딩 후 collection에 insert하기 위해 dictionary 형태로 변환도 진행하였다.
 -->
 
 - `embedding_model = SentenceTransformer(f"./{MODEL_FOLDER}/{EMBED_MODEL}")`
